k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s
  labels:
    app: hello-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-k8s
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
        - name: hello-k8s
          image: gabrielgasp/hello-k8s:v6.1
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 256Mi

          startupProbe:
            httpGet:
              path: /healthz
              port: web
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 20

          readinessProbe:
            httpGet:
              path: /healthz
              port: web
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: web
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
