k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-svc
spec:
  selector:
    app: hello-k8s
  type: ClusterIP
  ports:
    - name: web
      port: 9000
      targetPort: 8080 # Or "web" (port name in deployment)
